# poc_jeitto

./: README.md  main.py  pyproject.toml
poetry_test/: pyproject.toml
